:bug: Squash a bunch of minor bugs

--- a/frontend/src/app/survey/detail/result-overview/result-overview.component.sass
+++ b/frontend/src/app/survey/detail/result-overview/result-overview.component.sass
@@ -48,3 +48,7 @@ table
 
         &.unknown
             background-color: mat-color($mat-gray, 300)
+
+.total-accepted
+    padding: 8px
+    color: mat-color($mat-green, 700)
